[project]
name = "topdown-convert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crema-ms>=0.0.10",
    "fire>=0.7.1",
    "pyteomics>=4.7.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
